
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.91


   * fixed "cake bug" in ray tracter for cylinders directly aligned
     with incident light ray

   * taught sculpting engine to treat unbound waters as donor/acceptors */

   * stick_ball, and stick_ball_ratio can be used to quikly generate ball
     and stick representation without messing around with spheres...
   
   * NEW: display of valences for sticks (controlled by valence setting).
     stick_fixed_radius determines whether they are inscribed or not

   * pdb HETATMS are no longer sorted by default

   * Torsional term added to sculpting engine...not perfect, but it's 
     probably better than allowing for eclipsed conformations all over the place.

   * Optimized sculpting engine using CHUD/Shark -- now much faster.

   * Fixed CENT action with multi-state object

   * Adjusting Z scaling for mouse to provide finer control

   * Better WYSIWYG: If they are set to zero, then the settings:
       mesh_radius, line_radius, ribbon_radius,  dot_radius, dash_radius 
     are now subordinated to:
       mesh_width, line_width, ribbon_width, dot_width, and dash_width.
     However, if changed to a non-zero value, they will take priority.

     This behavior provides better WYSIWYG for raytracing, but will break
     some scripts.

   * fixed map_new ...,gaussian,... command and added options
         gaussian_resolution
         gaussian_b_adjust
         gaussion_b_floor
      default "map_new name" now creates a 2 A electron density map using
      current atomic Q and B for direct comparison with experimental density
