@@ -179,6 +179,7 @@ CHANGE LOG
 
 Changes up to 0.91
 
+   * cartoon_transparency setting
 
    * fixed "cake bug" in ray tracter for cylinders directly aligned
      with incident light ray
